--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 'CJ & Matthew'
 description: >
-  CJ and Matthew are getting married in Kansas City!
+  We are getting married in Kansas City on June 26, 2016!
   Learn about the nerdy couple,
   get info on the ceremony and reception,
   and find helpful hints to plan your visit to KC.
