--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,5 @@ permalink: pretty
 relative_permalinks: true
 paginate: 5
 exclude: [ 'README.md', 'Gemfile.lock', 'Gemfile', 'CNAME' ]
+sass:
+    style: compressed
